@@ -1,9 +1,33 @@
 package com.jaxer.example.jvm;
 
+import net.sf.cglib.proxy.Enhancer;
+import net.sf.cglib.proxy.MethodInterceptor;
+import net.sf.cglib.proxy.MethodProxy;
+
+import java.lang.reflect.Method;
+
 /**
+ * VM Args: -XX:PermSize=10M -XX:MaxPermSize=10M
  * 方法区OOM
  * <p>
  * Created by jaxer on 2019-03-20
  */
 public class JavaMethodAreaOOM {
+	public static void main(String[] args) {
+		while (true) {
+			Enhancer enhancer = new Enhancer();
+			enhancer.setSuperclass(OOMObject.class);
+			enhancer.setUseCache(false);
+			enhancer.setCallback(new MethodInterceptor() {
+				@Override
+				public Object intercept(Object o, Method method, Object[] objects, MethodProxy methodProxy) throws Throwable {
+					return methodProxy.invokeSuper(o, objects);
+				}
+			});
+			enhancer.create();
+		}
+	}
+
+	static class OOMObject {
+	}
 }
